💄 style(css): fix text-overflow in caliblur css   - 【what】 add missing semicolon and text-overflow: clip to rule   - 【why】 ensure consistent overflow handling and prevent layout bugs

--- a/cps/static/css/caliBlur.css
+++ b/cps/static/css/caliBlur.css
@@ -1320,7 +1320,8 @@ body > div.container-fluid > div > div.col-sm-10 > div > form > a:hover {
     line-height: 1.71428571;
     width: 100%;
     white-space: nowrap;
-    overflow: hidden
+    overflow: hidden;
+    text-overflow: clip
 }
 
 .navigation li {
